fixed the overflow hidden issue in the quotes component

--- a/src/components/Quote.css
+++ b/src/components/Quote.css
@@ -15,6 +15,7 @@
 
 .color-bar {
   display: flex;
+  overflow: hidden;
   flex-direction: row;
   width: 100%;
   height: 2px;
